# OS_labs

./: .gitignore  CMakeLists.txt  requests.txt
lab-1/: 1  1.c
lab-10/: 10.c
lab-11-12/: 11.c  Иллюстация проблемы 2х мьютексов.docx
lab-13/: 13  13.c
lab-14-15/: 14.c
lab-16/: 16.c
lab-17/: 17.c
lab-18/: 18  18.c
lab-2/: 2  2.c
lab-27/: README.md  client.c  node.c  server.c
lab-3/: 3  3.c
lab-31/: 31.c  CMakeLists.txt  Main.cpp  Proxy.cpp  Proxy.h  client.c  server.c
lab-31/Cache/: Cache.cpp  Cache.h  CacheRecord.cpp  CacheRecord.h
lab-31/Handlers/: ClientHandler.cpp  ClientHandler.h  ConnectionHandler.h  ServerHandler.cpp  ServerHandler.h
lab-32/: CMakeLists.txt  Main.cpp  Proxy.cpp  Proxy.h  main.cpp  notes.txt
lab-32/Cache/: Cache.cpp  Cache.h  CacheRecord.cpp  CacheRecord.h
lab-32/Handlers/: ClientHandler.cpp  ClientHandler.h  ConnectionHandler.h  ServerHandler.cpp  ServerHandler.h
lab-32/Logger/: Logger.cpp  Logger.h
lab-4/: 4.c  index.html
lab-5/: 5.c  index.html
lab-6/: 6.c  string_collection.txt  strings_generator.c
lab-8-9/: 8.c
